Add RISC-V Extensions
This change adds all supported RISC-V extensions for the platform to
ensure we compile things like floating point math optimally.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,8 @@
 [target.riscv32im-unknown-none-elf]
 runner = ["tinysys-run", "../../cpp/tinysys/software/emulator/sdcard"]
+rustflags = [
+    "-C", "target-feature=+zicsr,+zifencei,+zfinx",
+]
 
 [build]
 target = "riscv32im-unknown-none-elf"
